inicializacion de webpack y creacion de archivos sass

--- a/package.json
+++ b/package.json
@@ -19,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/MarioAndres540/app-clima/issues"
   },
-  "homepage": "https://github.com/MarioAndres540/app-clima#readme"
+  "homepage": "https://github.com/MarioAndres540/app-clima#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "requirejs": "^2.3.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
