uso y compilacion de webpack

--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "app-clima",
-  "version": "1.0.0",
-  "description": "Proyecto app-clima",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --config webpack.config.dev.js",
-    "dev": "webpack --config webpack.config.dev.js",
-    "build:watch": "webpack --watch --config webpack.config.dev.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarioAndres540/app-clima.git"
-  },
-  "keywords": [
-    "app-clima",
-    "api"
-  ],
-  "author": "Mario Andres Jaramillo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarioAndres540/app-clima/issues"
-  },
-  "homepage": "https://github.com/MarioAndres540/app-clima#readme",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "requirejs": "^2.3.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
-    "node-sass": "^8.0.0",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
-  }
+    "name": "app-clima",
+    "version": "1.0.0",
+    "description": "Proyecto app-clima",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack --mode=production",
+        "dev": "webpack --mode=development",
+        "watch": "webpack --mode=development --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MarioAndres540/app-clima.git"
+    },
+    "keywords": [
+        "app-clima",
+        "api"
+    ],
+    "author": "Mario Andres Jaramillo",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/MarioAndres540/app-clima/issues"
+    },
+    "homepage": "https://github.com/MarioAndres540/app-clima#readme",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "requirejs": "^2.3.6"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.12",
+        "@babel/preset-env": "^7.20.2",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
+        "mini-css-extract-plugin": "^2.7.2",
+        "node-sass": "^8.0.0",
+        "sass": "^1.58.0",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
+    }
 }
